--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,13 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#ff1744</color>
+    <color name="colorAccent">#F80000</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="blue">#0074D8</color>
     <color name="green">#689F38</color>
+    <color name="android_green">#A0BD3A</color>
+    <color name="java_red">#F80000</color>
+    <color name="blue_light">#4285F4</color>
+    <color name="orange">#EF6C00</color>
 </resources>
